# OpenEphysIGTLink

./: .gitignore  CMakeLists.txt  README.md  create_release.ps1
Common/: CMakeLists.txt  OpenIGTLinkCommon.cpp  OpenIGTLinkCommon.h
Source/: OpenEphysIGTLink.cpp  OpenEphysIGTLink.h  OpenEphysLib.cpp  OpenIGTLinkPlugin.cpp  OpenIGTLinkPlugin.h  OpenIGTLinkPluginEditor.cpp  OpenIGTLinkPluginEditor.h
libs/macos/include/: igtlConfigure.h
libs/windows/include/: igtlConfigure.h
libs/windows/lib/x64/: OpenIGTLink.lib  igtlutil.lib
